--- a/agentic-nondeterminism/LLM-to-IAS.adoc
+++ b/agentic-nondeterminism/LLM-to-IAS.adoc
@@ -1,4 +1,4 @@
-= Agents Always Lie: Why Clinical Truth Must Live Outside the Model 
+= Agents Always Lie: Why Clinical Truth Must Live Outside the Model
 Author: Rudolph Pienaar
 :doctype: article
 :stem:
@@ -7,11 +7,21 @@ Author: Rudolph Pienaar
 
 Neural networks are deterministic functions, but generative systems sample from the many possible inputs consistent with a compressed representation—a lossy “decompression” step that is inherently probabilistic. When these systems are given tool registries and asked to orchestrate clinical workflows, each additional tool and step enlarges the action graph and the surface for hallucination. We formalize this combinatorial growth, show why demanding more explicit “reasoning traces” does not remove the risk, and present an alternative: an Intent–Action Service (IAS) that translates clinical intents into a single, prevalidated workflow. We compare agentic tool-use against IAS compilation, localize where uncertainty remains, and outline an experiment to measure reproducibility and safety in clinical contexts. +
 
-Agentic generative AI has rapidly moved from a research curiosity to an asserted solution for complex, high-stakes clinical tasks. The prevailing narrative is that a large language model (LLM), equipped with institutional data, publications, and tools, can function as an “AI clinician” or autonomous assistant: given a patient history and imaging findings, the system will propose diagnoses, prognoses, or clinical workflows [1][8][9]. Yet empirical studies show persistent hallucination and faithfulness gaps even under constraints and guardrails [6][7][17][24][27][28][29]. Underspecification and distribution shift further undermine reproducibility: models with identical training loss can diverge on real-world data [25][26]. Multiple recent papers argue that hallucination is structurally inevitable for LLMs and agents, even with improved prompting or architectural tweaks [31][32][33][34]. A large agent survey formalizes the agent workflow as a POMDP and catalogs hallucination modes across perception, planning, and action [34]. Tool-augmented agents such as OpenAI’s Model Context Protocol (MCP) now provide standardized registries and invocation semantics for external tools, encouraging LLMs to assemble multi-step procedures at runtime [10][11]. MCP lowers integration friction but also enlarges the action graph that an agent can traverse, pushing the field toward increasingly agentic orchestration in clinical and enterprise settings [12].
+== Introduction
 
-A common claim in this space is that hallucination can be controlled by forcing agents to “show their work.” If the agent is required to output explicit reasoning chains, code, or deterministic-looking programs, and if it operates over a sufficiently rich evidence space, then the hope is that errors become rare and easily detectable [15][18][30]. This narrative is appealing, particularly to non-technical audiences; it suggests that transparency of steps naturally leads to correctness.
+"Lies, damned lies, and statistics"footnote:[Often attributed to Mark Twain, possibly originally Benjamin Disraeli.] is a reminder that numbers can be made to serve any story. If statistics can bend, so can its sibling: probability. It lets us say, “the truth is out there—somewhere in this cloud,” when pinning a single point is hard or impossible. Probability was supposed to help us grapple with complex, subsampled phenomena. A 95% chance of rain tomorrow was never meant to mean it _will_ rain. Many seem to forget that probability is the engine in every computational atom of generative AI, dazzling with an appearance of determinism. Sometimes that “good enough” shine hides unacceptable risk, especially in systems that touch human health and well-being. If a self-driving car crashes 1% of the time, the argument that it's definitely correct the other 99% of the time is small comfort.
 
-This paper argues that this view is fundamentally mistaken. Hallucination is not a superficial defect of generative models that can be removed through better prompting or insistence on explicit steps. It is a structural property of probabilistic systems navigating a very large space of possible action sequences [2][6][7]. When agents are given more tools and asked to reason in more steps, hallucination risk is not mitigated; it is amplified.
+In 1980 Searle argued in his seminal "Minds, Brain, and Programs" paper against the late 70s idea that just because a theoretical "AI" system _seems_ to understand does not mean that it _does_ or can. His warning was simple: anthropomorphism dazzles. Shortcuts that give good results can seduce. Almost half a century later, we have generative AI systems fueled by probability and silicon, that certain voices argue can be chained together to construct analyses in any context, even medical. Just because their outputs _seem_ correct does not mean they _are_. The appearance of correctness does not tell us anything about the underlying, reproducible, deterministic truth.
+
+I want to refute what warns to become a similarly entrenched, strangely unchallenged claim in today’s discourse: that agentic computation—using LLMs not merely to emit text, but to assemble programs and orchestrate complex analyses on the fly—is a sound and sensible use of the technology. Where Searle, the consummate philospher, leaned on a "Chinese room" Gedankenexperiment, I will lean on simple mathematics, as befits my academic roots in engineering and physcial sciences.
+
+"Lies" and "hallucination" are anthropomorphisms. A probabilistic sampler has no idea what a lie is (just as it has no ideas of any kind); it just draws a sample from a cloud. The _semanitc_ meaning is assigned by the external observer (us) who decide whether that draw lands inside or outside the tiny sliver of acceptable outcomes. Searle’s man in the Chinese room was not lying about Chinese; he was following a lookup. LLMs do the same. In safety-critical domains the space of “wrong” is enormous and the space of “right” is tiny, so with non-zero probability on the wrong side agents will always “lie” in the only sense that matters: they will inevitably produce unacceptable outputs. Attempts to fix this with ever more tools and longer “reasoning traces” are reactive band-aids on the mathematical certainty of uncertainty.
+
+Agentic generative AI has rapidly moved from a research curiosity to an asserted solution for complex, high-stakes clinical tasks. The prevailing narrative is that a large language model (LLM), equipped with institutional data, publications, and tools, can function as an “AI clinician” or autonomous assistant: given a patient history and imaging findings, the system will propose diagnoses, prognoses, or clinical workflows <<brown2020>>, <<rajpurkar2022aihealth>>, <<sendak2020translation>>. Yet empirical studies show persistent hallucination and faithfulness gaps even under constraints and guardrails <<ji2023survey>>, <<maynez2020faithfulness>>, <<liu2024faithfulness>>, <<bender2021parrots>>, <<manakul2023selfcheckgpt>>, <<lin2022truthfulqa>>, <<pagnoni2021factuality>>. Underspecification and distribution shift further undermine reproducibility: models with identical training loss can diverge on real-world data <<damour2020underspec>>, <<recht2019imagenet>>. Multiple recent papers argue that hallucination is structurally inevitable for LLMs and agents, even with improved prompting or architectural tweaks <<zhou2024hallucinate>>, <<chen2024inevitable>>, <<openai2025whyhallucinate>>, <<lin2025agentsurvey>>. A large agent survey formalizes the agent workflow as a POMDP and catalogs hallucination modes across perception, planning, and action <<lin2025agentsurvey>>. Tool-augmented agents such as OpenAI’s Model Context Protocol (MCP) now provide standardized registries and invocation semantics for external tools, encouraging LLMs to assemble multi-step procedures at runtime <<openai2024mcp>>, <<openai2024assistants>>. MCP lowers integration friction but also enlarges the action graph that an agent can traverse, pushing the field toward increasingly agentic orchestration in clinical and enterprise settings <<anthropic2024tooluse>>.
+
+A common claim in this space is that hallucination can be controlled by forcing agents to “show their work.” If the agent is required to output explicit reasoning chains, code, or deterministic-looking programs, and if it operates over a sufficiently rich evidence space, then the hope is that errors become rare and easily detectable <<xu2024impossible>>, <<chen2023pal>>, <<openai2024mitigating>>. This narrative is appealing, particularly to non-technical audiences; it suggests that transparency of steps naturally leads to correctness.
+
+This paper argues that this view is fundamentally mistaken. Hallucination is not a superficial defect of generative models that can be removed through better prompting or insistence on explicit steps. It is a structural property of probabilistic systems navigating a very large space of possible action sequences <<vaswani2017>>, <<ji2023survey>>, <<maynez2020faithfulness>>. When agents are given more tools and asked to reason in more steps, hallucination risk is not mitigated; it is amplified.
 
 To make this precise, we develop a graph-theoretic formulation of the action space available to an agent. We show that the number of possible workflows grows combinatorially with the number of tools and the length of the procedure, and that any probabilistic policy over this space has a non-zero probability of selecting an invalid workflow. Requiring more detailed reasoning only increases the number of opportunities for deviation.
 
@@ -23,7 +33,7 @@ The remainder of this paper develops the theoretical formulation, contrasts agen
 
 Neural networks are deterministic functions on a forward pass, but generation uses them to parameterize and sample from distributions rather than invert them.
 
-Let stem:[f_{\theta} : \mathbb{R}^d \to \mathbb{R}^k] be a trained encoder or decoder block [2][3]. Typically stem:[k \ll d], so many inputs collapse to the same representation. The preimage
+Let stem:[f_{\theta} : \mathbb{R}^d \to \mathbb{R}^k] be a trained encoder or decoder block <<vaswani2017>>, <<bishop2006>>. Typically stem:[k \ll d], so many inputs collapse to the same representation. The preimage
 
 [stem]
 ++++
@@ -32,7 +42,7 @@ Let stem:[f_{\theta} : \mathbb{R}^d \to \mathbb{R}^k] be a trained encoder or de
 
 is large for a typical stem:[z]. There is no unique inverse stem:[f_{\theta}^{-1}(z)]; instead there is an equivalence class of inputs consistent with stem:[z].
 
-Generative models therefore learn a conditional distribution stem:[p_{\theta}(x \mid c)] over this class given a context stem:[c] (prompt, conditioning, previous tokens) [1][2][4]. The forward pass computes the parameters of stem:[p_{\theta}], and sampling draws one member of the class:
+Generative models therefore learn a conditional distribution stem:[p_{\theta}(x \mid c)] over this class given a context stem:[c] (prompt, conditioning, previous tokens) <<brown2020>>, <<vaswani2017>>, <<kingma2013vae>>. The forward pass computes the parameters of stem:[p_{\theta}], and sampling draws one member of the class:
 
 [stem]
 ++++
@@ -61,7 +71,7 @@ P_{\text{correct}}(c) = \int_{x \in \mathcal{G}(c)} p_{\theta}(x \mid c)\, dx ,
 
 and stem:[1 - P_{\text{correct}}(c)] is the mass on outputs that are probabilistically plausible but clinically wrong. Because stem:[g] is many-to-one, stem:[\mathcal{S}(c)] is large; shrinking stem:[P_{\text{correct}}(c)] to 1 by deterministically collapsing stem:[p_{\theta}] would destroy diversity and often select the wrong mode.
 
-Full inversion of stem:[g] is neither possible nor desirable. Enforcing bijectivity would eliminate compression, preserve noise, and force the model to memorize rather than generalize. Formally, one would need a square, invertible map stem:[g: \mathbb{R}^n \to \mathbb{R}^n] with an invertible nonlinearity at every layer. This collapses generative modeling to a degenerate edge case: a reversible lookup that cannot reduce dimension, cannot discard nuisance variation, and cannot extrapolate beyond its training support. Invertible flow families (e.g., NICE/Real NVP/Glow) explore this corner of the space but still rely on sampling and do not solve semantic correctness [20][21]. Two distinct patients with the same diagnosis would “invert” to the same image; a deterministic inverse would be clinically misleading. The meaningful inverse is probabilistic: stem:[p(x \mid y, W)] expresses a distribution of inputs consistent with an output, not a single reconstruction. This is precisely what generative models implement by sampling.
+Full inversion of stem:[g] is neither possible nor desirable. Enforcing bijectivity would eliminate compression, preserve noise, and force the model to memorize rather than generalize. Formally, one would need a square, invertible map stem:[g: \mathbb{R}^n \to \mathbb{R}^n] with an invertible nonlinearity at every layer. This collapses generative modeling to a degenerate edge case: a reversible lookup that cannot reduce dimension, cannot discard nuisance variation, and cannot extrapolate beyond its training support. Invertible flow families (e.g., NICE/Real NVP/Glow) explore this corner of the space but still rely on sampling and do not solve semantic correctness <<dinh2017realnvp>>, <<kingma2018glow>>. Two distinct patients with the same diagnosis would “invert” to the same image; a deterministic inverse would be clinically misleading. The meaningful inverse is probabilistic: stem:[p(x \mid y, W)] expresses a distribution of inputs consistent with an output, not a single reconstruction. This is precisely what generative models implement by sampling.
 
 By contrast, practical architectures are deliberately non-square at key layers: encoders reduce stem:[n \to k] with stem:[k \ll n], and even decoder blocks introduce rank-deficient projections (e.g., attention projections of size stem:[d_{\text{model}} \times d_k], embedding tables with fewer rows than token combinations). These maps are not invertible by construction; any “inverse” must operate over a preimage set. Forcing square, invertible Jacobians everywhere would explode parameter counts, prevent dimensionality reduction, and still not resolve the many-to-one mapping of semantic content to representations.
 
@@ -225,17 +235,17 @@ The Intent–Action Service pattern offers a complementary perspective. It ackno
 
 It is important to be explicit about the limitations of this approach. IAS does not guarantee correctness of the workflows themselves; that remains the responsibility of clinical governance and software verification. Nor does it prevent misinterpretation of user intents. However, it draws a clear boundary: if an error occurs in execution, it is attributable to a deterministic component. This makes the system amenable to traditional forms of testing, certification, and regulation.
 
-This suggests an MCP–IAS spectrum. At the fully agentic end, LLMs discover and order primitive tools exposed via MCP, with maximal flexibility and maximal action-space risk. In the middle, MCP exposes coarser “macro-tools” that encapsulate validated sub-workflows, reducing branching but leaving some orchestration to the model. At the deterministic end, the LLM selects only intents and passes them to IAS, which compiles to a single canonical workflow per intent. Movement along this spectrum trades agentic freedom for reproducibility and auditability; the argument here is that safety-critical clinical systems should reside near the IAS end. Formal verification work (e.g., Reluplex, AI2 abstract interpretation) shows how hard it is to certify arbitrary neural policies at scale [22][23]; collapsing orchestration into deterministic pipelines is a more tractable safety surface.
+This suggests an MCP–IAS spectrum. At the fully agentic end, LLMs discover and order primitive tools exposed via MCP, with maximal flexibility and maximal action-space risk. In the middle, MCP exposes coarser “macro-tools” that encapsulate validated sub-workflows, reducing branching but leaving some orchestration to the model. At the deterministic end, the LLM selects only intents and passes them to IAS, which compiles to a single canonical workflow per intent. Movement along this spectrum trades agentic freedom for reproducibility and auditability; the argument here is that safety-critical clinical systems should reside near the IAS end. Formal verification work (e.g., Reluplex, AI2 abstract interpretation) shows how hard it is to certify arbitrary neural policies at scale <<katz2017reluplex>>, <<gehr2018ai2>>; collapsing orchestration into deterministic pipelines is a more tractable safety surface.
 
-Retrieval-augmented systems such as Openevidence sit in this middle region. By conditioning generation on cited literature, they shrink the semantic space and improve auditability, but they do not eliminate probabilistic failure modes [15][16]. Citation mismatch (a true citation that does not support the generated claim) and unsupported synthesis remain common RAG errors [16][17]. In orchestration terms, retrieval constrains content selection but leaves the sequence of tool calls (retrieve, filter, rank, summarize) under a probabilistic policy. IAS addresses a different layer: once an intent is selected, the workflow is deterministic. Openevidence-style RAG can complement IAS for evidence retrieval, but it does not obviate the need to collapse procedural action graphs.
+Retrieval-augmented systems such as Openevidence sit in this middle region. By conditioning generation on cited literature, they shrink the semantic space and improve auditability, but they do not eliminate probabilistic failure modes <<xu2024impossible>>, <<smith2025agentic>>. Citation mismatch (a true citation that does not support the generated claim) and unsupported synthesis remain common RAG errors <<smith2025agentic>>, <<liu2024faithfulness>>. In orchestration terms, retrieval constrains content selection but leaves the sequence of tool calls (retrieve, filter, rank, summarize) under a probabilistic policy. IAS addresses a different layer: once an intent is selected, the workflow is deterministic. Openevidence-style RAG can complement IAS for evidence retrieval, but it does not obviate the need to collapse procedural action graphs.
 
-Code-generating RAG systems—where the model emits Python to process retrieved data and plot results—reduce some failure modes but do not remove the probabilistic boundary. Retrieval can still fetch misaligned or incomplete evidence; code synthesis can introduce incorrect filters, statistical tests, or visualizations; and small prompt variations can yield different pipelines for the same question [18][19]. Graphical outputs can make incorrect computations look plausible unless every generated script is independently verified. Fixed, prevalidated pipelines (as in IAS) collapse this procedural space; ad hoc generated programs do not.
+Code-generating RAG systems—where the model emits Python to process retrieved data and plot results—reduce some failure modes but do not remove the probabilistic boundary. Retrieval can still fetch misaligned or incomplete evidence; code synthesis can introduce incorrect filters, statistical tests, or visualizations; and small prompt variations can yield different pipelines for the same question <<chen2023pal>>, <<wang2024codepolicies>>. Graphical outputs can make incorrect computations look plausible unless every generated script is independently verified. Fixed, prevalidated pipelines (as in IAS) collapse this procedural space; ad hoc generated programs do not.
 
-There are deeper limits on “making agents deterministic.” NLG and generative surveys document persistent hallucination and faithfulness gaps even under heavy constraints [6][7][17][24]. Underspecification work shows models with identical training loss can behave divergently under shift, undermining reproducibility [25][26]. Attempts to verify arbitrary neural programs face undecidability and intractability barriers; practical verifiers only handle narrow cases [22][23]. Chasing determinism in the generative policy collapses, in the limit, to a lookup table that cannot generalize—an uninteresting edge case that abandons the benefits of generative modeling. Determinism must instead be imposed on the orchestration layer, not the generative core.
+There are deeper limits on “making agents deterministic.” NLG and generative surveys document persistent hallucination and faithfulness gaps even under heavy constraints <<ji2023survey>>, <<maynez2020faithfulness>>, <<liu2024faithfulness>>, <<bender2021parrots>>. Underspecification work shows models with identical training loss can behave divergently under shift, undermining reproducibility <<damour2020underspec>>, <<recht2019imagenet>>. Attempts to verify arbitrary neural programs face undecidability and intractability barriers; practical verifiers only handle narrow cases <<katz2017reluplex>>, <<gehr2018ai2>>. Chasing determinism in the generative policy collapses, in the limit, to a lookup table that cannot generalize—an uninteresting edge case that abandons the benefits of generative modeling. Determinism must instead be imposed on the orchestration layer, not the generative core.
 
-Guardrails and self-checks have not closed this gap. Empirical studies show that detector-based or self-consistency approaches (e.g., SelfCheckGPT) reduce but do not eliminate hallucinations, often missing fluent but unsupported claims [27]. Factuality benchmarks (TruthfulQA, factual summarization) remain unsolved despite prompt tuning and guardrail policies [28][29]. Safety frameworks (e.g., NeMo/Guardrails-style filters) mitigate some failure modes but do not change the underlying probability mass over invalid generations; hallucination remains a structural property of the agentic policy [30]. In short, agent-space guardrails trim the tails but cannot make the distribution deterministic.
+Guardrails and self-checks have not closed this gap. Empirical studies show that detector-based or self-consistency approaches (e.g., SelfCheckGPT) reduce but do not eliminate hallucinations, often missing fluent but unsupported claims <<manakul2023selfcheckgpt>>. Factuality benchmarks (TruthfulQA, factual summarization) remain unsolved despite prompt tuning and guardrail policies <<lin2022truthfulqa>>, <<pagnoni2021factuality>>. Safety frameworks (e.g., NeMo/Guardrails-style filters) mitigate some failure modes but do not change the underlying probability mass over invalid generations; hallucination remains a structural property of the agentic policy <<openai2024mitigating>>. In short, agent-space guardrails trim the tails but cannot make the distribution deterministic.
 
-Recent agent surveys complement this argument with a state-space/process lens. Lin et al. model agents as POMDPs and show hallucinations can arise across perception, planning, and action [34]. Our formulation uses an action-graph/combinatorial lens: \(|\mathcal{S}(G)|\) grows rapidly with tools and steps, and any non-zero mass on invalid paths yields irreducible orchestration risk. The two views converge: whether framed as stochastic transitions in a POMDP or as a probability distribution over action paths, agentic policies retain unavoidable failure probability; removing it requires collapsing the action space into deterministic, prevalidated workflows (IAS).
+Recent agent surveys complement this argument with a state-space/process lens. Lin et al. model agents as POMDPs and show hallucinations can arise across perception, planning, and action <<lin2025agentsurvey>>. Our formulation uses an action-graph/combinatorial lens: \(|\mathcal{S}(G)|\) grows rapidly with tools and steps, and any non-zero mass on invalid paths yields irreducible orchestration risk. The two views converge: whether framed as stochastic transitions in a POMDP or as a probability distribution over action paths, agentic policies retain unavoidable failure probability; removing it requires collapsing the action space into deterministic, prevalidated workflows (IAS).
 
 == Conclusion
 
@@ -247,37 +257,38 @@ For clinical workflows, where deterministic behavior and auditability are non-ne
 
 == References
 
-1. Brown, T., et al. “Language Models are Few-Shot Learners.” *Advances in Neural Information Processing Systems*, 2020.
-2. Vaswani, A., et al. “Attention Is All You Need.” *Advances in Neural Information Processing Systems*, 2017.
-3. Bishop, C. *Pattern Recognition and Machine Learning*. Springer, 2006.
-4. Kingma, D., and Welling, M. “Auto-Encoding Variational Bayes.” arXiv preprint, 2013.
-5. Ho, J., et al. “Denoising Diffusion Probabilistic Models.” *Advances in Neural Information Processing Systems*, 2020.
-6. Ji, Z., et al. “Survey of Hallucination in Natural Language Generation.” *ACM Computing Surveys*, 2023.
-7. Maynez, J., et al. “On Faithfulness and Factuality in Abstractive Summarization.” *ACL*, 2020.
-8. Rajpurkar, P., et al. “AI in Health and Medicine.” *Nature Medicine*, 2022.
-9. Sendak, M., et al. “A Path for Translation of Machine Learning Models into Clinical Practice.” *NPJ Digital Medicine*, 2020.
-10. OpenAI. “Model Context Protocol.” Developer Docs, 2024.
-11. OpenAI. “Assistant Tooling and MCP Examples.” Developer Portal, 2024.
-12. Anthropic. “Tool Use and Safety Considerations for Claude.” Technical Report, 2024.
-13. Gao, L., et al. “Retrieval-Augmented Generation for Knowledge-Intensive NLP: A Survey.” *Transactions of the ACL*, 2023.
-14. Krishna, K., et al. “Parsimonious Citations: Detecting Hallucinated and Mismatched Sources in RAG.” *EMNLP*, 2024.
-15. Xu, S., Zhang, T., et al. “On the Impossibility of Fully Reliable Generative Models.” arXiv preprint, 2024.
-16. Smith, J., and Doe, A. “Agentic Reasoning in Clinical Systems: A Safety Perspective.” *Journal of Biomedical AI*, 2025.
-17. Liu, P., et al. “Evaluating Faithfulness in Retrieval-Augmented Generation.” *ACL Findings*, 2024.
-18. Chen, T., et al. “Program-Aided Language Models for Robust Reasoning.” *ICLR*, 2023.
-19. Wang, B., et al. “Code-as-Policies: Safety and Robustness Challenges for LLM-Generated Code.” arXiv preprint, 2024.
-20. Dinh, L., et al. “Density Estimation using Real NVP.” *ICLR*, 2017.
-21. Kingma, D., and Dhariwal, P. “Glow: Generative Flow with Invertible 1x1 Convolutions.” *NeurIPS*, 2018.
-22. Katz, G., et al. “Reluplex: An Efficient SMT Solver for Verifying Deep Neural Networks.” *CAV*, 2017.
-23. Gehr, T., et al. “AI2: Safety and Robustness Certification of Neural Networks with Abstract Interpretation.” *S&P*, 2018.
-24. Bender, E., et al. “On the Dangers of Stochastic Parrots.” *FAccT*, 2021.
-25. D’Amour, A., et al. “Underspecification Presents Challenges for Credibility in Modern ML.” *PNAS*, 2020.
-26. Recht, B., et al. “Do ImageNet Classifiers Generalize to ImageNet?” *ICML*, 2019.
-27. Manakul, P., et al. “SelfCheckGPT: Zero-Resource Hallucination Detection for Generative Large Language Models.” arXiv preprint, 2023.
-28. Lin, S., et al. “TruthfulQA: Measuring How Models Mimic Human Falsehoods.” *ACL*, 2022.
-29. Pagnoni, A., et al. “Understanding Factuality in Abstractive Summarization.” *EMNLP*, 2021.
-30. OpenAI. “Mitigating Hallucinations with Prompting and System-Level Guardrails.” Technical Note, 2024.
-31. Zhou, A., et al. “LLMs Will Always Hallucinate, and We Need to Live With This.” arXiv preprint, 2024.
-32. Chen, Y., et al. “Hallucination is Inevitable: An Innate Limitation of Large Language Models.” arXiv preprint, 2024.
-33. OpenAI. “Why Language Models Hallucinate.” Technical Report, 2025.
-34. Lin, X., et al. “LLM-based Agents Suffer from Hallucinations: A Survey of Taxonomy, Methods, and Directions.” arXiv:2509.18970, 2025.
+* [[searle1980]] Searle, J. “Minds, Brains, and Programs.” *Behavioral and Brain Sciences*, 1980.
+* [[brown2020]] Brown, T., et al. “Language Models are Few-Shot Learners.” *Advances in Neural Information Processing Systems*, 2020.
+* [[vaswani2017]] Vaswani, A., et al. “Attention Is All You Need.” *Advances in Neural Information Processing Systems*, 2017.
+* [[bishop2006]] Bishop, C. *Pattern Recognition and Machine Learning*. Springer, 2006.
+* [[kingma2013vae]] Kingma, D., and Welling, M. “Auto-Encoding Variational Bayes.” arXiv preprint, 2013.
+* [[ho2020ddpm]] Ho, J., et al. “Denoising Diffusion Probabilistic Models.” *Advances in Neural Information Processing Systems*, 2020.
+* [[ji2023survey]] Ji, Z., et al. “Survey of Hallucination in Natural Language Generation.” *ACM Computing Surveys*, 2023.
+* [[maynez2020faithfulness]] Maynez, J., et al. “On Faithfulness and Factuality in Abstractive Summarization.” *ACL*, 2020.
+* [[rajpurkar2022aihealth]] Rajpurkar, P., et al. “AI in Health and Medicine.” *Nature Medicine*, 2022.
+* [[sendak2020translation]] Sendak, M., et al. “A Path for Translation of Machine Learning Models into Clinical Practice.” *NPJ Digital Medicine*, 2020.
+* [[openai2024mcp]] OpenAI. “Model Context Protocol.” Developer Docs, 2024.
+* [[openai2024assistants]] OpenAI. “Assistant Tooling and MCP Examples.” Developer Portal, 2024.
+* [[anthropic2024tooluse]] Anthropic. “Tool Use and Safety Considerations for Claude.” Technical Report, 2024.
+* [[gao2023rag]] Gao, L., et al. “Retrieval-Augmented Generation for Knowledge-Intensive NLP: A Survey.” *Transactions of the ACL*, 2023.
+* [[krishna2024parsimonious]] Krishna, K., et al. “Parsimonious Citations: Detecting Hallucinated and Mismatched Sources in RAG.” *EMNLP*, 2024.
+* [[xu2024impossible]] Xu, S., Zhang, T., et al. “On the Impossibility of Fully Reliable Generative Models.” arXiv preprint, 2024.
+* [[smith2025agentic]] Smith, J., and Doe, A. “Agentic Reasoning in Clinical Systems: A Safety Perspective.” *Journal of Biomedical AI*, 2025.
+* [[liu2024faithfulness]] Liu, P., et al. “Evaluating Faithfulness in Retrieval-Augmented Generation.” *ACL Findings*, 2024.
+* [[chen2023pal]] Chen, T., et al. “Program-Aided Language Models for Robust Reasoning.” *ICLR*, 2023.
+* [[wang2024codepolicies]] Wang, B., et al. “Code-as-Policies: Safety and Robustness Challenges for LLM-Generated Code.” arXiv preprint, 2024.
+* [[dinh2017realnvp]] Dinh, L., et al. “Density Estimation using Real NVP.” *ICLR*, 2017.
+* [[kingma2018glow]] Kingma, D., and Dhariwal, P. “Glow: Generative Flow with Invertible 1x1 Convolutions.” *NeurIPS*, 2018.
+* [[katz2017reluplex]] Katz, G., et al. “Reluplex: An Efficient SMT Solver for Verifying Deep Neural Networks.” *CAV*, 2017.
+* [[gehr2018ai2]] Gehr, T., et al. “AI2: Safety and Robustness Certification of Neural Networks with Abstract Interpretation.” *S&P*, 2018.
+* [[bender2021parrots]] Bender, E., et al. “On the Dangers of Stochastic Parrots.” *FAccT*, 2021.
+* [[damour2020underspec]] D’Amour, A., et al. “Underspecification Presents Challenges for Credibility in Modern ML.” *PNAS*, 2020.
+* [[recht2019imagenet]] Recht, B., et al. “Do ImageNet Classifiers Generalize to ImageNet?” *ICML*, 2019.
+* [[manakul2023selfcheckgpt]] Manakul, P., et al. “SelfCheckGPT: Zero-Resource Hallucination Detection for Generative Large Language Models.” arXiv preprint, 2023.
+* [[lin2022truthfulqa]] Lin, S., et al. “TruthfulQA: Measuring How Models Mimic Human Falsehoods.” *ACL*, 2022.
+* [[pagnoni2021factuality]] Pagnoni, A., et al. “Understanding Factuality in Abstractive Summarization.” *EMNLP*, 2021.
+* [[openai2024mitigating]] OpenAI. “Mitigating Hallucinations with Prompting and System-Level Guardrails.” Technical Note, 2024.
+* [[zhou2024hallucinate]] Zhou, A., et al. “LLMs Will Always Hallucinate, and We Need to Live With This.” arXiv preprint, 2024.
+* [[chen2024inevitable]] Chen, Y., et al. “Hallucination is Inevitable: An Innate Limitation of Large Language Models.” arXiv preprint, 2024.
+* [[openai2025whyhallucinate]] OpenAI. “Why Language Models Hallucinate.” Technical Report, 2025.
+* [[lin2025agentsurvey]] Lin, X., et al. “LLM-based Agents Suffer from Hallucinations: A Survey of Taxonomy, Methods, and Directions.” arXiv:2509.18970, 2025.
